[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockurl"
version = "5.0.0"
description = "BlockURL Self Hosted Server (uvicorn)"
requires-python = ">=3.8"

dependencies = [
    "flask",
    "uvicorn",
    "asgiref",
    "peewee>=3.17,<4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
blockurl-server = "blockurl.__main__:launch_app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
blockurl = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]